<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >

    <ImageView
        android:layout_width="252dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:id="@+id/profile_image_view"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_view"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/profile_name"
        android:fontFamily="@font/baristaregular"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tv_line"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@id/profile_name"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line"
        android:layout_marginTop="20dp"
        android:id="@+id/relative_layout_track"
        >

        <TextView
            android:id="@+id/tv_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:text="Track:"
            android:textAppearance="@style/MyProfileTextStyle" />

        <TextView
            android:id="@+id/tv_profile_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_track"
            android:text="@string/profile_track"
            android:textAppearance="@style/MyProfileTextStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_track"
        android:layout_marginTop="20dp"
        android:id="@+id/relative_layout_country"
        >

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:text="Country:"
            android:textAppearance="@style/MyProfileTextStyle" />

        <TextView
            android:id="@+id/tv_profile_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_country"
            android:text="@string/profile_country"
            android:textAppearance="@style/MyProfileTextStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_country"
        android:layout_marginTop="20dp"
        android:id="@+id/relative_layout_email"
        >

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:text="Email:"
            android:textAppearance="@style/MyProfileTextStyle" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_email"
            android:text="@string/profile_email"
            android:textAppearance="@style/MyProfileTextStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_email"
        android:layout_marginTop="20dp"
        android:id="@+id/relative_layout_phone"
        >

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:text="Phone number:"
            android:textAppearance="@style/MyProfileTextStyle" />

        <TextView
            android:id="@+id/tv_profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_phone"
            android:text="@string/profile_number"
            android:textAppearance="@style/MyProfileTextStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_phone"
        android:layout_marginTop="20dp"
        android:id="@+id/relative_layout_slack"
        >

        <TextView
            android:id="@+id/tv_slack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:text="Slack Username:"
            android:textAppearance="@style/MyProfileTextStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_profile_slack"
            android:text="@string/profile_slack_name"
            android:layout_toRightOf="@id/tv_slack"
            android:textAppearance="@style/MyProfileTextStyle"
            />

    </RelativeLayout>

    </LinearLayout>



</LinearLayout>